--- a/about/Love.htm
+++ b/about/Love.htm
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="/sh/style.css">
   <link rel="stylesheet" href="/about/S/c.css">
   <link rel="stylesheet" href="/about/S/color.css">
+  <link rel="stylesheet" href="/sh/cn.css">
+  <link rel="stylesheet" href="/about/S/work.css">
 </head>
 
 <body>
