--- a/about/about/index.html
+++ b/about/about/index.html
@@ -14,18 +14,17 @@
       Hard_Driver
     </a>
     <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a class="active" href="/about/about.htm">About</a></li>
-      <li><a href="/about/work.htm">Work</a></li>
-      <li><a href="Love.htm">Love</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a class="active" href="/about/about">About</a></li>
+      <li><a href="/about/work">Work</a></li>
+      <li><a href="/about/Love.html">Love</a></li>
     </ul>
   </header>
   <section>
     <img src="/bg/nazo_shizuku.png" id="nano">
-    <img src="/bg/01.png" id="mountains_behind">
+    <img src="/bg/01.png" id="ko">
     <h2 id="text">UTAC99645</h2>
     <a href="#sec" id="btn">Explore</a>
-    <img src="/res/images/mountains_front.png" id="mountains_front">
   </section>
   <div class="sec" id="sec">
     <h2>
@@ -48,7 +47,7 @@
         Deathlystillness@GMAIL.COM
       </h1>
     </a>
-    <a href="work.htm">
+    <a href="/about/work/">
       <h1 class="work">
         WORK
       </h1>
