--- a/index.html
+++ b/index.html
@@ -14,54 +14,53 @@
       Hard_Driver
     </a>
     <ul>
-      <li><a class="active" href="/index.html">Home</a></li>
-      <li><a href="/about/about.htm">About</a></li>
-      <li><a href="/about/work.htm">Work</a></li>
+      <li><a class="active" href="/">Home</a></li>
+      <li><a href="/about/about/">About</a></li>
+      <li><a href="/about/work/">Work</a></li>
       <li><a href="/about/Love.htm">Love</a></li>
     </ul>
   </header>
   <section>
     <img src="/bg/nazo_shizuku.png" id="nano">
-    <img src="/bg/01.png" id="mountains_behind">
+    <img src="/bg/01.png" id="ko">
     <h2 id="text">UTAC99645</h2>
     <a href="#sec" id="btn">Explore</a>
-    <img src="/res/images/mountains_front.png" id="mountains_front">
   </section>
   <div class="sec" id="sec">
     <h2>
       <main>主页</main>
     </h2>
     <p>
-      <a href="DE.htm">
+      <a href="/DE/">
         <img src="res/DE/1.jpg" width="50%" />
       </a>
-      <a href="F.htm">
+      <a href="/DE/F.htm">
         <img src="https://utac99645.github.io/file.put/res/F.02.jpg" width="49%" />
       </a>
     <table>
       <tr>
-        <video autoplay poster="res/Lod.gif" width="50%" loop>
+        <video autoplay poster="/res/Lod.gif" width="50%" loop>
           <source src="https://utac99645.github.io/file.put/res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
         </video>
       </tr>
       <tr>
-        <video autoplay poster="res/Lod.gif" width="50%" loop>
+        <video autoplay poster="/res/Lod.gif" width="50%" loop>
           <source src="https://utac99645.github.io/file.put/res/bau.mp4" type="video/mp4">
         </video>
       </tr>
     </table>
     <a href="EVIL.LOVE.HTM">
-      <img width="100%" src="res/T/E.gif" />
+      <img width="100%" src="/res/T/E.gif" />
     </a>
     <hr>
     <h1 class="box">
-      <a href="big.tes.htm" style="color: red">
+      <a href="/DE/big.tes.htm" style="color: red">
         BIG TE
       </a>
-      <a href="sb.htm" style="color: red">
+      <a href="/sb/sb.htm" style="color: red">
         S
       </a>
-      <a href="big.tes.htm" style="color: red">
+      <a href="/DE/big.tes.htm" style="color: red">
         T
       </a>
       </p>
