--- a/DE/index.html
+++ b/DE/index.html
@@ -1,28 +1,29 @@
 <html style="background-image:url(https://utac99645.github.io/file.put/bg/DE.png);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
-  <link rel="stylesheet" href="about/S/c.css">
-<img src="res/DE/bg.jpg" alt="背景" width="100%">
-<img src="res/DE/De.png" alt="头像" width="50%" hspace="25%">
+<link rel="stylesheet" href="about/S/c.css">
+<img src="/res/DE/bg.jpg" alt="背景" width="100%">
+<img src="/res/DE/De.png" alt="头像" width="50%" hspace="25%">
 <h1 style="text-align:center;color: yellow">
-  NAME
+    NAME
 </h1>
 <a href="https://www.pixiv.net/users/73061695">
-  <h1 style="text-align:center">
-    Decrilus
-  </h1>
+    <h1 style="text-align:center">
+        Decrilus
+    </h1>
 </a>
 <hr>
 <h1 style="text-align:center;color: yellow">
-  PS
+    PS
 </h1>
 <h1 style="text-align:center;color: blueviolet">
-  一个爱画各种可爱图片的画师
+    一个爱画各种可爱图片的画师
 </h1>
 <h1 style="text-align:center;color: yellow">
-  PS2
+    PS2
 </h1>
 <h6 style="text-align:center;color: lightgoldenrodyellow">
-  我不认识
+    我不认识
 </h6>
+
 </html>
