--- a/c.htm
+++ b/c.htm
@@ -15,7 +15,7 @@ background-attachment:fixed; background-size:cover;">
     <br>
     (59X60+35)
   </h1>
-  <img src="res/Lod.gif" width="100%" alt="loding.....">
+  <img src="/res/Lod.gif" width="100%" alt="loding.....">
   <audio src="https://utac99645.github.io/file.put/res/s/vd.m4a" autoplay loop>
   </audio>
 </body>
