--- a/about/work/index.html
+++ b/about/work/index.html
@@ -39,9 +39,9 @@
             <h1>
                 EASY NOTE
             </h1>
-            </dev>
+            </div>
             <hr>
-            <dev>
+            <div>
                 <a href="https://github.com/Kin69/EasyNotes/">
                     <img class="logo" width="50%" src="https://raw.githubusercontent.com/Kin69/EasyNotes/master/app/src/main/res/mipmap-xxxhdpi/ic_launcher_round.webp">
                 </a>
@@ -68,9 +68,9 @@
             <h1>
                 Compass
             </h1>
-            </dev>
+            </div>
             <hr>
-            <dev>
+            <div>
                 <a href="https://github.com/Kr0oked/Compass">
                     <img class="logo" width="50%" src="https://github.com/Kr0oked/Compass/blob/master/fastlane/metadata/android/en-US/images/icon.png?raw=true">
                 </a>
@@ -113,6 +113,6 @@
 
     <script src="/sh/js2.js">
     </script>
-</body>
+    </body>
 
 </html>
