--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a class="active" href="/">Home</a></li>
         <li><a href="/about/about/">About</a></li>
         <li><a href="/about/work/">Work</a></li>
-        <li><a href="/about/Love.htm">Love</a></li>
+        <li><a href="/about/Love.html">Love</a></li>
       </ul>
     </header>
     <section>
