--- a/about/Love.html
+++ b/about/Love.html
@@ -60,7 +60,7 @@
     <a href="https://github.com/wgh136/PicaComic">
       <h1>PicaComic</h1>
     </a>
-    <a href="1.html">
+    <a href="https://18r.utac.us.kg">
       <hr />
     </a>
     <h1 style="text-align: center; color: royalblue">数据存储</h1>
