--- a/EVIL.LOVE.HTM
+++ b/EVIL.LOVE.HTM
@@ -1,10 +1,10 @@
-<html style="background-image:url(res/T/e.jpg);
+<html style="background-image:url(/res/T/evil.jpg);
 background-repeat:no-repeat; background-position:center center;
 background-attachment:fixed; background-size:cover;">
 
 <head>
-  <link rel="stylesheet" href="about/S/c.css">
-  <link rel="stylesheet" href="sh/cn.css">
+  <link rel="stylesheet" href="/about/S/c.css">
+  <link rel="stylesheet" href="/sh/cn.css">
   <title>EVIL.LOVE</title>
 </head>
 <img src="res/T/E.gif" width="100%">
