--- a/about/index.html
+++ b/about/index.html
@@ -31,7 +31,7 @@
       <main>关于</main>
     </h2>
     <p>
-      <img hspace="25%" width="50%" src="https://utac99645.github.io/file.put/res/m/m.png">
+      <img hspace="25%" width="50%" src="/about/112972181_p0.jpg">
     <h1 class="name">
       NAME
     </h1>
