--- a/EVIL.LOVE.HTM
+++ b/EVIL.LOVE.HTM
@@ -1,5 +1,5 @@
 <html style="background-image:url(/res/T/evil.jpg);
-background-repeat:no-repeat; background-position:center center;
+background-repeat:no-repeat; background-position:center;
 background-attachment:fixed; background-size:cover;">
 
 <head>
