--- a/about/Love.html
+++ b/about/Love.html
@@ -17,8 +17,8 @@
     </a>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a href="/about/about/">About</a></li>
-      <li><a href="/about/work/">Work</a></li>
+      <li><a href="/about/about">About</a></li>
+      <li><a href="/about/work">Work</a></li>
       <li><a class="active" href="/about/Love.html">Love</a></li>
     </ul>
   </header>
