--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
     </a>
     <ul>
       <li><a href="/">Home</a></li>
-      <li><a class="active" href="/about/about">About</a></li>
+      <li><a class="active" href="/about">About</a></li>
       <li><a href="/about/work">Work</a></li>
       <li><a href="/about/Love.html">Love</a></li>
     </ul>
