--- a/about/work/index.html
+++ b/about/work/index.html
@@ -16,7 +16,7 @@
         </a>
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/about/about">About</a></li>
+          <li><a href="/about">About</a></li>
             <li><a class="active" href="/about/work">Work</a></li>
             <li><a href="/about/Love.html">Love</a></li>
         </ul>
