--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </a>
       <ul>
         <li><a class="active" href="/">Home</a></li>
-        <li><a href="/about/about/">About</a></li>
+        <li><a href="/about">About</a></li>
         <li><a href="/about/work/">Work</a></li>
         <li><a href="/about/Love.html">Love</a></li>
       </ul>
