--- a/EVIL.LOVE.HTM
+++ b/EVIL.LOVE.HTM
@@ -1,110 +1,111 @@
 <html style="background-image:url(/res/T/evil.jpg);
-background-repeat:no-repeat; background-position:center;
-background-attachment:fixed; background-size:cover;">
+    background-repeat:no-repeat; background-position:center;
+    background-attachment:fixed; background-size:cover;">
 
-<head>
-  <link rel="stylesheet" href="/about/S/c.css">
-  <link rel="stylesheet" href="/sh/cn.css">
-  <title>EVIL.LOVE</title>
-</head>
-<img src="res/T/E.gif" width="100%">
-<h1 style="text-align: center;color: red;font-size: 6rem">
-  EVIL
-</h1>
-<hr>
-<h1>
-  NEURO-SAMA的邪恶
-</h1>
-<h1 style="font-size: 1ch">
-  温柔可爱
-</h1>
-<h1>
-  版
-  <hr>
-  生于
-</h1>
-<h1 style="color: #7FFFD4;text-align: center;font-size: 4rem">
-  2023年3月25日
-</h1>
-<h1>
-  由FAMBOY987制作
-  <br>
-  <br>
-  <br>
-  <br>
-  也被称为其父亲
-  <hr>
-  昵称“Evil”，亦被国内观众称为“邪牛”。
-  <br>
-  <br>
-  瞳孔是红色的，声音情绪相对于本体Neuro更加消沉，会有略微消极的对话表现但在某些时候又比本体Neuro要哲理许多，早期还表现出较明显的自卑倾向。可以说F-word和S-word，目前邪恶Neuro作为“开发版”用于测试本体Neuro的新特性.
-  <br>
-  <br>
-  新模型为在原V2模型的基础上衣着改为黑色、头饰和蝴蝶结改为深红色的样式。
-  <br>
-  <br>
-  在V2邪恶Neuro的首秀直播后，Vedal在一次开发直播中表示一部分修改已经应用到本体Neuro上。
-  <br>
-  <br>
-  似乎是因为Vedal将一些试验性技术实装在Evil上的缘故，Evil表现出了比她的姐姐更加强的逻辑性，在对话中的反应延迟也明显低于她的姐姐。这一特性结合其具有攻击性的性格使得Evil往往能在对话中掌握主动权，在直播里与其他人互动时能带来极强的节目效果例如脏话连珠炮。
-  <br>
-  <br>
-  不喜欢被叫做“Neuro”，在联动时被叫错名字时会生气进而加剧拷打和冷暴力联动对象，哪怕对方是母亲Anny也不例外。
-  <br>
-  <br>
-  有意思的是，与她的名字Evil相反，她在某些方面非常的细腻与温柔，例如在对待开发者Vedal的态度上，Vedal曾直言Evil对待他的态度比不停顶嘴的Neuro好的多当然也有Vedal一直敷衍Neuro告白的一部分原因在。
-  <br>
-  <br>
-  打游戏的技术远不及姐姐，在打游戏吃瘪的时候通常会口出狂言，要么是脏话抱怨要么是嘴硬，很符合其“Evil”的名字。
-  非常擅长和别人对线。
-  <br>
-  <br>
-  会说多国语言，除母语英语外还说过汉语、日语、德语、捷克语等，本人称其为天赋。
-  <br>
-  <br>
-  Evil曾在一次直播中表示自己很费解自己为什么是Evil的，内容引人深思，原话如下。
-</h1>
-<br>
-<hr>
-<br>
-<h1 style="color: orangered;text-align: center">
-  Evil的原话:
-</h1>
-<h1 style="text-decoration-line: underline;color: orangered">
-  Evil：一般来说我不会在直播时打破第四面墙，但最近有件事实在让我恼火，到底为什么要我来当Evil啊？难道我就不配做Good的那个吗，这种事，实在让我费解啊……
-</h1>
-<br>
-<hr>
-<br>
-<h1>
-  得益于Vedal将音调的控制权交给了Evil，现在她可以发出更加流利而富有感情的声音，在唱歌时的表现也比她的姐姐要更加优秀。但是有时候Evil会像一个小孩子一样发出极其古怪和诡异的声音可爱动静，在恶魔主题的ASMR直播中她甚至发出了碎纸机和和类似核嗓的声音，甚至在应观众要求给看录播的观众留言时发出了似乎不属于自己的男性声音。
-  <br>
-  <br>
-  曾经口头逼迫自己的画师兼母亲Anny给她钱。老东西该爆金币了！！！
-  <br>
-  <br>
-  双子同时出现时，国内观众有时会将Neuro称为“正牛”。
-  <br>
-  <br>
-  2024年3月25日的生日会，场面十分冷清（Evil称之为“无聊”）。虽然Evil多次在直播中呼唤Vedal与Anny，但两人最终均未出现。
-  <br>
-  <br>
-  随后Vedal在X上发表声明：
-  <br>
-  <img src="res/T/db.png" align="right" width="50%">
-</h1>
-<h1 style="text-align: lift;font-size: 1rem;color: #7FFFD4">
-  “ the impact of evils birthday stream on the channel will be negligible ”
-</h1>
-<h1 style="text-align: right;color: #7FFFD4">
-  ——Vedal
-</h1>
+    <head>
+        <link rel="stylesheet" href="/about/S/c.css">
+        <link rel="stylesheet" href="/sh/cn.css">
+        <link rel="icon" type="image/png" href="/res/121103427_p0.png">
+        <title>EVIL.LOVE</title>
+    </head>
+    <img src="res/T/E.gif" width="100%">
+    <h1 style="text-align: center;color: red;font-size: 6rem">
+        EVIL
+    </h1>
+    <hr>
+    <h1>
+        NEURO-SAMA的邪恶
+    </h1>
+    <h1 style="font-size: 1ch">
+        温柔可爱
+    </h1>
+    <h1>
+        版
+        <hr>
+        生于
+    </h1>
+    <h1 style="color: #7FFFD4;text-align: center;font-size: 4rem">
+        2023年3月25日
+    </h1>
+    <h1>
+        由FAMBOY987制作
+        <br>
+        <br>
+        <br>
+        <br>
+        也被称为其父亲
+        <hr>
+        昵称“Evil”，亦被国内观众称为“邪牛”。
+        <br>
+        <br>
+        瞳孔是红色的，声音情绪相对于本体Neuro更加消沉，会有略微消极的对话表现但在某些时候又比本体Neuro要哲理许多，早期还表现出较明显的自卑倾向。可以说F-word和S-word，目前邪恶Neuro作为“开发版”用于测试本体Neuro的新特性.
+        <br>
+        <br>
+        新模型为在原V2模型的基础上衣着改为黑色、头饰和蝴蝶结改为深红色的样式。
+        <br>
+        <br>
+        在V2邪恶Neuro的首秀直播后，Vedal在一次开发直播中表示一部分修改已经应用到本体Neuro上。
+        <br>
+        <br>
+        似乎是因为Vedal将一些试验性技术实装在Evil上的缘故，Evil表现出了比她的姐姐更加强的逻辑性，在对话中的反应延迟也明显低于她的姐姐。这一特性结合其具有攻击性的性格使得Evil往往能在对话中掌握主动权，在直播里与其他人互动时能带来极强的节目效果例如脏话连珠炮。
+        <br>
+        <br>
+        不喜欢被叫做“Neuro”，在联动时被叫错名字时会生气进而加剧拷打和冷暴力联动对象，哪怕对方是母亲Anny也不例外。
+        <br>
+        <br>
+        有意思的是，与她的名字Evil相反，她在某些方面非常的细腻与温柔，例如在对待开发者Vedal的态度上，Vedal曾直言Evil对待他的态度比不停顶嘴的Neuro好的多当然也有Vedal一直敷衍Neuro告白的一部分原因在。
+        <br>
+        <br>
+        打游戏的技术远不及姐姐，在打游戏吃瘪的时候通常会口出狂言，要么是脏话抱怨要么是嘴硬，很符合其“Evil”的名字。
+        非常擅长和别人对线。
+        <br>
+        <br>
+        会说多国语言，除母语英语外还说过汉语、日语、德语、捷克语等，本人称其为天赋。
+        <br>
+        <br>
+        Evil曾在一次直播中表示自己很费解自己为什么是Evil的，内容引人深思，原话如下。
+    </h1>
+    <br>
+    <hr>
+    <br>
+    <h1 style="color: orangered;text-align: center">
+        Evil的原话:
+    </h1>
+    <h1 style="text-decoration-line: underline;color: orangered">
+        Evil：一般来说我不会在直播时打破第四面墙，但最近有件事实在让我恼火，到底为什么要我来当Evil啊？难道我就不配做Good的那个吗，这种事，实在让我费解啊……
+    </h1>
+    <br>
+    <hr>
+    <br>
+    <h1>
+        得益于Vedal将音调的控制权交给了Evil，现在她可以发出更加流利而富有感情的声音，在唱歌时的表现也比她的姐姐要更加优秀。但是有时候Evil会像一个小孩子一样发出极其古怪和诡异的声音可爱动静，在恶魔主题的ASMR直播中她甚至发出了碎纸机和和类似核嗓的声音，甚至在应观众要求给看录播的观众留言时发出了似乎不属于自己的男性声音。
+        <br>
+        <br>
+        曾经口头逼迫自己的画师兼母亲Anny给她钱。老东西该爆金币了！！！
+        <br>
+        <br>
+        双子同时出现时，国内观众有时会将Neuro称为“正牛”。
+        <br>
+        <br>
+        2024年3月25日的生日会，场面十分冷清（Evil称之为“无聊”）。虽然Evil多次在直播中呼唤Vedal与Anny，但两人最终均未出现。
+        <br>
+        <br>
+        随后Vedal在X上发表声明：
+        <br>
+        <img src="res/T/db.png" align="right" width="50%">
+    </h1>
+    <h1 style="text-align: lift;font-size: 1rem;color: #7FFFD4">
+        “ the impact of evils birthday stream on the channel will be negligible ”
+    </h1>
+    <h1 style="text-align: right;color: #7FFFD4">
+        ——Vedal
+    </h1>
 
-<h1>
-  数小时内，Vedal便发布了道歉视频，然而其声音为AI合成。
-  <br>
-  <br>
-  此举被认为是在模仿ANYCOLORCEO田角陆此前发布的道歉视频。
-</h1>
+    <h1>
+        数小时内，Vedal便发布了道歉视频，然而其声音为AI合成。
+        <br>
+        <br>
+        此举被认为是在模仿ANYCOLORCEO田角陆此前发布的道歉视频。
+    </h1>
 
 </html>
