--- a/about/index.html
+++ b/about/index.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <title>关于</title>
-  <link rel="stylesheet" href="/sh/style.css">
-  <link rel="stylesheet" href="/about/S/c.css">
-  <link rel="stylesheet" href="/about/S/color.css">
-</head>
+    <head>
+        <title>关于</title>
+        <link rel="stylesheet" href="/sh/style.css">
+        <link rel="stylesheet" href="/about/S/c.css">
+        <link rel="stylesheet" href="/about/S/color.css">
+        <link rel="icon" type="image/png" href="/res/121103427_p0.png">
+    </head>
 
-<body>
-  <header>
-    <a href="https://space.bilibili.com/3493135598487801" class="logo">
-      Hard_Driver
-    </a>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a class="active" href="/about">About</a></li>
-      <li><a href="/about/work">Work</a></li>
-      <li><a href="/about/Love.html">Love</a></li>
-    </ul>
-  </header>
-  <section>
-    <img src="/bg/nazo_shizuku.png" id="nano">
-    <img src="/bg/01.png" id="ko">
-    <h2 id="text">UTAC99645</h2>
-    <a href="#sec" id="btn">Explore</a>
-  </section>
-  <div class="sec" id="sec">
-    <h2>
-      <main>关于</main>
-    </h2>
-    <p>
-      <img hspace="25%" width="50%" src="/about/112972181_p0.jpg">
-    <h1 class="name">
-      NAME
-    </h1>
-    <h1 class="driver">
-      DRIVER
-    </h1>
-    <br>
-    <h1 class="mail">
-      MAIL
-    </h1>
-    <a href="Mailto:deathlystillness@outlook.COM">
-      <h1 class="UTAC99645">
-        Deathlystillness@GMAIL.COM
-      </h1>
-    </a>
-    <a href="/about/work/">
-      <h1 class="work">
-        WORK
-      </h1>
-    </a>
-    <h1 class="man">
-      网页更新缓慢
-    </h1>
-    </p>
-  </div>
+    <body>
+        <header>
+            <a href="https://space.bilibili.com/3493135598487801" class="logo">
+                Hard_Driver
+            </a>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a class="active" href="/about">About</a></li>
+                <li><a href="/about/work">Work</a></li>
+                <li><a href="/about/Love.html">Love</a></li>
+            </ul>
+        </header>
+        <section>
+            <img src="/bg/nazo_shizuku.png" id="nano">
+            <img src="/bg/01.png" id="ko">
+            <h2 id="text">UTAC99645</h2>
+            <a href="#sec" id="btn">Explore</a>
+        </section>
+        <div class="sec" id="sec">
+            <h2>
+                <main>关于</main>
+            </h2>
+            <p>
+                <img hspace="25%" width="50%" src="/about/112972181_p0.jpg">
+                <h1 class="name">
+                    NAME
+                </h1>
+                <h1 class="driver">
+                    DRIVER
+                </h1>
+                <br>
+                <h1 class="mail">
+                    MAIL
+                </h1>
+                <a href="Mailto:deathlystillness@outlook.COM">
+                    <h1 class="UTAC99645">
+                        Deathlystillness@GMAIL.COM
+                    </h1>
+                </a>
+                <a href="/about/work/">
+                    <h1 class="work">
+                        WORK
+                    </h1>
+                </a>
+                <h1 class="man">
+                    网页更新缓慢
+                </h1>
+            </p>
+        </div>
 
-  <script src="/sh/js2.js">
-  </script>
-</body>
+<script src="/sh/js2.js">
+</script>
+    </body>
 
 </html>
