--- a/index.html
+++ b/index.html
@@ -1,71 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <title>主页</title>
-    <link rel="stylesheet" href="/sh/style.css">
-    <link rel="stylesheet" href="/about/S/c.css">
-    <link rel="stylesheet" href="/about/S/color.css">
-  </head>
+    <head>
+        <title>主页</title>
+        <link rel="stylesheet" href="/sh/style.css">
+        <link rel="stylesheet" href="/about/S/c.css">
+        <link rel="stylesheet" href="/about/S/color.css">
+        <link rel="icon" type="image/png" href="/res/121103427_p0.png">
+    </head>
 
-  <body>
-    <header>
-      <a href="https://space.bilibili.com/3493135598487801" class="logo">
-        Hard_Driver
-      </a>
-      <ul>
-        <li><a class="active" href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/about/work/">Work</a></li>
-        <li><a href="/about/Love.html">Love</a></li>
-      </ul>
-    </header>
-    <section>
-      <img src="/bg/nazo_shizuku.png" id="nano">
-      <img src="/bg/01.png" id="ko">
-      <h2 id="text">UTAC99645</h2>
-      <a href="#sec" id="btn">Explore</a>
-    </section>
-    <div class="sec" id="sec">
-      <h2>
-        <main>主页</main>
-      </h2>
-      <p>
-        <a href="/DE/">
-          <img src="res/DE/1.jpg" width="100%" />
-        </a>
-        <table>
-          <tr>
-            <video autoplay poster="/res/Lod.gif" width="50%" loop>
-              <source src="https://utac99645.github.io/file.put/res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
-              </source></video>
-          </tr>
-          <tr>
-            <video autoplay poster="/res/Lod.gif" width="50%" loop>
-              <source src="https://utac99645.github.io/file.put/res/bau.mp4" type="video/mp4">
-              </source></video>
-          </tr>
-        </table>
-        <a href="EVIL.LOVE.HTM">
-          <img width="100%" src="/res/T/E.gif" />
-        </a>
-        <hr>
-        <h1 class="box">
-          <a href="/DE/big.tes.htm" style="color: red">
-            BIG TE
-          </a>
-          <a href="/sb/sb.htm" style="color: red">
-            S
-          </a>
-          <a href="/DE/big.tes.htm" style="color: red">
-            T
-          </a>
-        </h1>
-      </p>
-    </div>
+    <body>
+        <header>
+            <a href="https://github.com/UTAC99645" class="logo">
+                Hard_Driver
+            </a>
+            <ul>
+                <li><a class="active" href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
+                <li><a href="/about/work/">Work</a></li>
+                <li><a href="/about/Love.html">Love</a></li>
+                <li><a href="/res/domain.jpg">域名证书</a></li>
+            </ul>
+        </header>
+        <section>
+            <img src="/bg/nazo_shizuku.png" id="nano">
+            <img src="/bg/01.png" id="ko">
+            <h2 id="text">UTAC99645</h2>
+            <a href="#sec" id="btn">Explore</a>
+        </section>
+        <div class="sec" id="sec">
+            <h2>
+                <main>主页</main>
+            </h2>
+            <p>
+                <a href="/DE/">
+                    <img src="res/DE/1.jpg" width="100%" />
+                </a>
+                <table>
+                    <tr>
+                        <video autoplay poster="/res/Lod.gif" width="50%" loop>
+                            <source src="https://utac99645.github.io/file.put/res/GV4AUzDWwAA83FV.mp4" type="video/mp4">
+                            </source></video>
+                    </tr>
+                    <tr>
+                        <video autoplay poster="/res/Lod.gif" width="50%" loop>
+                            <source src="https://utac99645.github.io/file.put/res/bau.mp4" type="video/mp4">
+                            </source></video>
+                    </tr>
+                </table>
+                <a href="EVIL.LOVE.HTM">
+                    <img width="100%" src="/res/T/E.gif" />
+                </a>
+                <hr>
+                <h1 class="box">
+                    <a href="/DE/big.tes.htm" style="color: red">
+                        BIG TE
+                    </a>
+                    <a href="/sb/sb.htm" style="color: red">
+                        S
+                    </a>
+                    <a href="/DE/big.tes.htm" style="color: red">
+                        T
+                    </a>
+                </h1>
+            </p>
+        </div>
 
 <script src="/sh/js2.js">
 </script>
-  </body>
+    </body>
 
 </html>
