--- a/about/Love.html
+++ b/about/Love.html
@@ -1,86 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <title>Love</title>
-  <link rel="stylesheet" href="/sh/style.css">
-  <link rel="stylesheet" href="/about/S/c.css">
-  <link rel="stylesheet" href="/about/S/color.css">
-  <link rel="stylesheet" href="/sh/cn.css">
-  <link rel="stylesheet" href="/about/S/work.css">
-</head>
+    <head>
+        <title>Love</title>
+        <link rel="stylesheet" href="/sh/style.css">
+        <link rel="stylesheet" href="/about/S/c.css">
+        <link rel="stylesheet" href="/about/S/color.css">
+        <link rel="stylesheet" href="/sh/cn.css">
+        <link rel="stylesheet" href="/about/S/work.css">
+        <link rel="icon" type="image/png" href="/res/121103427_p0.png">
+    </head>
 
-<body>
-  <header>
-    <a href="https://space.bilibili.com/3493135598487801" class="logo">
-      Hard_Driver
-    </a>
-    <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/about/about">About</a></li>
-      <li><a href="/about/work">Work</a></li>
-      <li><a class="active" href="/about/Love.html">Love</a></li>
-    </ul>
-  </header>
-  <section>
-    <img src="/bg/nazo_shizuku.png" id="nano">
-    <img src="/bg/01.png" id="ko">
-    <h2 id="text">UTAC99645</h2>
-    <a href="#sec" id="btn">Explore</a>
-  </section>
-  <div class="sec" id="sec">
-    <h2>
-      <main>LOVE</main>
-    </h2>
-    <p>
-    <h1>FROM</h1>
-    <h1>斐济仙人</h1>
-    <hr />
-    <a href="https://www.123pan.com/s/nrbLVv-5BoI.html">
-      <img src="https://utac99645.github.io/file.put/res/L/pac.png" width="25%" hspace="37.5%" />
-    </a>
-    <a href="https://picawang.com/">
-      <h1>哔咔 PicACG</h1>
-    </a>
-    <a href="https://www.123pan.com/s/nrbLVv-qBoI.html">
-      <img src="https://utac99645.github.io/file.put/res/L/pe.png" width="25%" hspace="37.5%" />
-    </a>
-    <a href="https://github.com/Notsfsssf/pixez-flutter;color: yellow">
-      <h1>pixez</h1>
-    </a>
-    <a href="https://www.123pan.com/s/nrbLVv-6BoI.html">
-      <img src="https://utac99645.github.io/file.put/res/L/jm.png" width="25%" hspace="37.5%" />
-    </a>
-    <a href="https://18comic.vip/">
-      <h1>禁漫天堂</h1>
-    </a>
-    <a href="https://www.123pan.com/s/nrbLVv-yBoI.html">
-      <img src="https://utac99645.github.io/file.put/res/L/pic.png" width="25%" hspace="37.5%" />
-    </a>
-    <a href="https://github.com/wgh136/PicaComic">
-      <h1>PicaComic</h1>
-    </a>
-    <a href="https://18r.utac.us.kg">
-      <hr />
-    </a>
-    <h1 style="text-align: center; color: royalblue">数据存储</h1>
-    <h1 style="text-align: center; color: blue">
-      <a href="https://123pan.com"> 123盘 </a>
-      &
-      <a href="https://github.com"> GITHUB </a>
-    </h1>
-    <h6 style="text-align: center; color: whitesmoke">下不了找她们</h6>
-    <hr />
-    <h2>数据来源</h2>
-    <a href="https://github.com/WRR2001/comics">
-      <h1 style="text-align: center; color: ghostwhite">回家的路</h1>
-    </a>
-    <h6 style="text-align: center; color: deeppink">不对找她</h6>
-    </p>
-  </div>
+    <body>
+        <header>
+            <a href="https://space.bilibili.com/3493135598487801" class="logo">
+                Hard_Driver
+            </a>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about/about">About</a></li>
+                <li><a href="/about/work">Work</a></li>
+                <li><a class="active" href="/about/Love.html">Love</a></li>
+            </ul>
+        </header>
+        <section>
+            <img src="/bg/nazo_shizuku.png" id="nano">
+            <img src="/bg/01.png" id="ko">
+            <h2 id="text">UTAC99645</h2>
+            <a href="#sec" id="btn">Explore</a>
+        </section>
+        <div class="sec" id="sec">
+            <h2>
+                <main>LOVE</main>
+            </h2>
+            <p>
+                <h1>FROM</h1>
+                <h1>斐济仙人</h1>
+                <hr />
+                <a href="https://www.123pan.com/s/nrbLVv-5BoI.html">
+                    <img src="https://utac99645.github.io/file.put/res/L/pac.png" width="25%" hspace="37.5%" />
+                </a>
+                <a href="https://picawang.com/">
+                    <h1>哔咔 PicACG</h1>
+                </a>
+                <a href="https://www.123pan.com/s/nrbLVv-qBoI.html">
+                    <img src="https://utac99645.github.io/file.put/res/L/pe.png" width="25%" hspace="37.5%" />
+                </a>
+                <a href="https://github.com/Notsfsssf/pixez-flutter;color: yellow">
+                    <h1>pixez</h1>
+                </a>
+                <a href="https://www.123pan.com/s/nrbLVv-6BoI.html">
+                    <img src="https://utac99645.github.io/file.put/res/L/jm.png" width="25%" hspace="37.5%" />
+                </a>
+                <a href="https://18comic.vip/">
+                    <h1>禁漫天堂</h1>
+                </a>
+                <a href="https://www.123pan.com/s/nrbLVv-yBoI.html">
+                    <img src="https://utac99645.github.io/file.put/res/L/pic.png" width="25%" hspace="37.5%" />
+                </a>
+                <a href="https://github.com/wgh136/PicaComic">
+                    <h1>PicaComic</h1>
+                </a>
+                <a href="https://18r.utac99645.top">
+                    <hr />
+                </a>
+                <h1 style="text-align: center; color: royalblue">数据存储</h1>
+                <h1 style="text-align: center; color: blue">
+                    <a href="https://123pan.com"> 123盘 </a>
+                    &
+                    <a href="https://github.com"> GITHUB </a>
+                </h1>
+                <h6 style="text-align: center; color: whitesmoke">下不了找她们</h6>
+                <hr />
+                <h2>数据来源</h2>
+                <a href="https://github.com/WRR2001/comics">
+                    <h1 style="text-align: center; color: ghostwhite">回家的路</h1>
+                </a>
+                <h6 style="text-align: center; color: deeppink">不对找她</h6>
+            </p>
+        </div>
 
-  <script src="/sh/js2.js">
-  </script>
-</body>
+<script src="/sh/js2.js">
+</script>
+    </body>
 
 </html>
