--- a/about/Love.html
+++ b/about/Love.html
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="/about/S/color.css">
         <link rel="stylesheet" href="/sh/cn.css">
         <link rel="stylesheet" href="/about/S/work.css">
-        <link rel="icon" type="image/png" href="/res/121103427_p0.png">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.png" type="image/png">
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     </head>
 
     <body>
