--- a/about/work/index.html
+++ b/about/work/index.html
@@ -7,7 +7,9 @@
         <link rel="stylesheet" href="/about/S/c.css">
         <link rel="stylesheet" href="/about/S/color.css">
         <link rel="stylesheet" href="S/work.css">
-        <link rel="icon" type="image/png" href="/res/121103427_p0.png">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.png" type="image/png">
+        <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     </head>
 
     <body>
