--- a/about/work/index.html
+++ b/about/work/index.html
@@ -105,7 +105,7 @@
                 <hr>
                 <div>
                     <a href="https://github.com/d4rken-org/octi">
-                        <img src="https://github.com/d4rken-org/octi/raw/main/fastlane/metadata/android/en-US/images/featureGraphic.jpg">
+                        <img class="logo" width="45%" src="https://github.com/d4rken-org/octi/raw/main/fastlane/metadata/android/en-US/images/featureGraphic.jpg">
                     </a>
                 </div>
                 <div>
